examples/test/testpolicy6842.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6842
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key42: value17
      key37: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value31
      podSelector:
        matchLabels:
          key2: value24
          key17: value1
          key35: value38
